# AETHERIS

./: .editorconfig  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260424_01_production_spine.py
backend/app/: lifespan.py  main.py
backend/app/api/: __init__.py  admin.py  deps.py  sessions.py  world.py  ws.py
backend/app/core/: config.py  constants.py  errors.py  logging.py  security.py
backend/app/db/: postgres.py  redis.py
backend/app/models/: __init__.py  session.py  world_snapshot.py
backend/app/repositories/: presence_repo_memory.py  presence_repo_redis.py  protocols.py  session_repo.py  session_repo_memory.py  session_repo_postgres.py  world_repo.py
backend/app/schemas/: common.py  session.py  world.py  ws.py
backend/app/services/: consent_service.py  presence_service.py  seed_service.py  session_service.py  telemetry_service.py  token_service.py  world_engine.py
backend/app/websocket/: manager.py  protocol.py  rooms.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_health.py  test_seed_service.py  test_sessions.py  test_world.py  test_ws.py
docs/: api.md  architecture.md  roadmap.md
frontend/: eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  three-webgpu.d.ts
frontend/src/api/: client.ts  contracts.ts  sessions.ts  world.ts
frontend/src/app/: App.tsx  ConsentGate.tsx  ErrorBoundary.tsx  RenderViewport.tsx  api.ts  types.ts
frontend/src/biometrics/: camera.ts  cleanup.ts  localInput.ts  microphone.ts  permissions.ts  privacy.ts
frontend/src/content/: siteManifest.ts
frontend/tests/: smoke.spec.ts
infrastructure/: README.md
(+24 files in other folders)
